--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "exp_legal",
   "version": "0.1.0",
+  "homepage": "https://vvvchowdary000.github.io/Experitec-Legal/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
