--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "exp_legal",
   "version": "0.1.0",
-  "homepage": "https://vvvchowdary000.github.io/Experitec-Legal/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
@@ -45,6 +44,7 @@
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "autoprefixer": "^10.4.20",
+    "gh-pages": "^6.2.0",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.14"
   }
